tests/negative/gold/interface-optional-test.gold
tests/negative/interface-optional-test.toit:6:11: error: Unresolved identifier: 'unresolved'
  foo x y=unresolved --named1=unresolved --named2=2
          ^~~~~~~~~~
tests/negative/interface-optional-test.toit:6:31: error: Unresolved identifier: 'unresolved'
  foo x y=unresolved --named1=unresolved --named2=2
                              ^~~~~~~~~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/interface-optional-test.toit'
Compilation failed
